<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Go4Lunch</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="menu_your_lunch">Your Lunch</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_logout">Logout</string>

    <string name="title_activity_setting">User informations</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="floatingactionbutton">FloatingActionButton</string>

    <string name="connection_succeed">Successful authentication</string>
    <string name="error_authentication_canceled">Authentication canceled</string>
    <string name="error_no_internet">No internet connection</string>
    <string name="error_unknown_error">An unknown error has occurred</string>

    <string name="facebook_application_id">757140525003096</string>
    <string name="facebook_login_protocol_scheme" translatable="false" tools:ignore="UnusedResources">fb757140525003096</string>
    <string name="logout_user">logout</string>
    <string name="delete_user">delete user</string>
    <string name="user_deleted">The user was deleted</string>

    <string name="sign_in_with_google">Sign in with Google</string>
    <string name="sign_in_with_facebook">Login with Facebook</string>
    <string name="sign_in_with_twitter">Login with Twitter</string>
    <string name="login_subtitle">Find a nice restaurant and invite you co-workers for lunch !</string>
    <string name="login_title">Go4Lunch</string>
    <string name="no_user_email">No user email</string>
    <string name="no_user_name_found">No user name found</string>
    <string name="no_user_connected">No user connected</string>
    <string name="label_email">EMail :</string>
    <string name="label_email_value">Email value</string>
    <string name="label_user_name">User Name :</string>
    <string name="label_user_name_value">User Name value</string>
    <string name="update_user_name">Update User Name</string>
    <string name="profile_picture_description">Profile picture</string>

    <string name="bottom_navigation_map_view">Map View</string>
    <string name="bottom_navigation_list_view">List View</string>
    <string name="bottom_navigation_workmates">Workmates</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_map_fragment">Hello map fragment</string>
    <string name="hello_list_view_fragment">Hello list view fragment</string>
    <string name="hello_workmates_fragment">Hello workmates fragment</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="authorize_notifications">Authorize notifications</string>
    <string name="search">search</string>
    <string name="confirm_delete_account">Please, confirm delete account ?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="error_deleting_account">Error deleting account</string>
    <string name="error_disconnecting_account">Error while disconnecting the account</string>
    <string name="error_during_connection">Error during connection</string>
    <string name="other_exception">other exception</string>
    <string name="no_exception">no exception</string>
    <string name="permission_request">Permission Request</string>
    <string name="permission_message">Application needs permission to access device location to provide required services. Please allow the permission.</string>
    <string name="grant_permission">Grant permission</string>
    <string name="discard_permission">Discard permission</string>
    <string name="localisation_allowed">Localization permission is allowed for this app</string>
    <string name="localisation_not_allowed">Localization permission is not allowed for this app</string>
    <string name="permission_denied_message">Permission Denied. The app can not be used.</string>
    <string name="permission_granted_message">Permission Granted</string>
    <string name="title_activity_detail_restaurant">Details restaurant</string>

    <string name="activity_detail_restaurant_floating_action_button_description">Choose this restaurant</string>
    <string name="activity_detail_restaurant_bottom_navigation_call">Call</string>
    <string name="activity_detail_restaurant_bottom_navigation_like">Like</string>
    <string name="activity_detail_restaurant_bottom_navigation_website">Website</string>

    <string name="image_location_description">location</string>
    <string name="empty_string"></string>
    <string name="open_now">Open now</string>
    <string name="closing_now">Closing now</string>



</resources>