<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/navigation_drawer_home"
            android:icon="@drawable/ic_baseline_local_dining_24"
            android:title="@string/menu_your_lunch" />
        <item
            android:id="@+id/navigation_drawer_setting"
            android:icon="@drawable/ic_baseline_settings_24"
            android:title="@string/menu_settings" />
        <item
            android:id="@+id/navigation_drawer_logout"
            android:icon="@drawable/ic_baseline_power_settings_new_24"
            android:title="@string/menu_logout" />
    </group>
</menu>