<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_drawer_home">

    <fragment
        android:id="@+id/navigation_drawer_home"
        android:name="com.example.go4lunch.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_drawer_setting"
        android:name="com.example.go4lunch.ui.setting.SettingFragment"
        android:label="@string/menu_settings"
        tools:layout="@layout/fragment_setting" />

    <fragment
        android:id="@+id/navigation_drawer_logout"
        android:name="com.example.go4lunch.ui.logout.LogoutFragment"
        android:label="@string/menu_logout"
        tools:layout="@layout/fragment_logout" />

</navigation>