<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.gtlabgo4lunch.ui.logout.LogoutFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent"
        >

        <ImageView
            android:id="@+id/fragment_logout_imageView_user_picture"
            android:layout_width="150dp"
            android:layout_height="150dp"
            app:srcCompat="@drawable/ic_baseline_account_circle_24"
            android:layout_gravity="center_horizontal"
            android:layout_margin="@dimen/default_large_margin"
            android:contentDescription="@string/profile_picture_description" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintTop_toTopOf="parent" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_email"
                android:textSize="@dimen/default_text_size"
                android:textStyle="bold"
                android:layout_margin="@dimen/default_margin"/>

            <TextView
                android:id="@+id/fragment_logout_textView_user_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/label_email_value"
                android:textSize="@dimen/default_text_size"
                android:layout_margin="@dimen/default_margin"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_user_name"
                android:textSize="@dimen/default_text_size"
                android:textStyle="bold"
                android:layout_margin="@dimen/default_margin"/>

            <TextView
                android:id="@+id/fragment_logout_textView_user_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/label_user_name_value"
                android:textSize="@dimen/default_text_size"
                android:layout_margin="@dimen/default_margin"/>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="@dimen/default_large_margin"
        app:layout_constraintBottom_toBottomOf="parent">

        <Button
            android:id="@+id/fragment_logout_button_logout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:padding="@dimen/default_padding"
            android:text="@string/logout_user"
            android:textColor="@color/white"
            android:textSize="@dimen/default_text_size"
            app:cornerRadius="@dimen/default_button_corner_radius"
            app:icon="@drawable/ic_baseline_logout_24"
            app:iconTint="@color/secondaryTextColor" />

        <Button
            android:id="@+id/fragment_logout_button_delete_user"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/default_padding"
            android:layout_marginBottom="10dp"
            android:text="@string/delete_user"
            android:textColor="@color/white"
            android:textSize="@dimen/default_text_size"
            app:cornerRadius="@dimen/default_button_corner_radius"
            app:icon="@drawable/ic_baseline_delete_24"
            app:iconTint="@color/secondaryTextColor"
            />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>