<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="@dimen/nav_header_height"
    android:background="@drawable/side_nav_bar"
    android:gravity="bottom"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:theme="@style/ThemeOverlay.AppCompat.Dark">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textStyle="bold"
        android:padding="@dimen/default_large_padding"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center_vertical">

        <ImageView
            android:id="@+id/navigation_header_imageView_user"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:contentDescription="@string/nav_header_desc"
            android:scaleType="fitXY"
            app:srcCompat="@mipmap/ic_launcher_round" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center_vertical"
            android:paddingLeft="@dimen/default_large_padding">

            <TextView
                android:id="@+id/navigation_header_user_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                 android:text="@string/nav_header_title"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                />

            <TextView
                android:id="@+id/navigation_header_user_email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nav_header_subtitle"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                />

        </LinearLayout>
    </LinearLayout>

</LinearLayout>