<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/content_setting_imageView_profile"
            android:layout_width="150dp"
            android:layout_height="150dp"
            app:srcCompat="@drawable/ic_baseline_account_circle_24"
            android:layout_gravity="center_horizontal"
            android:layout_margin="@dimen/default_large_margin"/>

        <TextView
            android:id="@+id/content_setting_textView_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/label_email"
            android:textSize="@dimen/default_text_size"
            android:layout_marginTop="@dimen/default_large_margin"
            android:layout_marginLeft="@dimen/default_large_margin"
            android:layout_marginRight="@dimen/default_large_margin"
            android:layout_marginBottom="@dimen/default_margin"/>

        <TextView
            android:id="@+id/content_setting_textView_userName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/label_user_name"
            android:textSize="@dimen/default_text_size"
            android:layout_marginLeft="@dimen/default_large_margin"
            android:layout_marginRight="@dimen/default_large_margin"
            android:layout_marginBottom="@dimen/default_margin" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="@dimen/default_large_margin"
        app:layout_constraintBottom_toBottomOf="parent">

        <Button
            android:id="@+id/content_setting_button_logout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/default_padding"
            android:layout_marginBottom="10dp"
            android:text="@string/logout_user"
            android:textColor="@color/white"
            android:textSize="@dimen/default_text_size"
            app:cornerRadius="@dimen/default_button_corner_radius"
            app:icon="@drawable/ic_baseline_logout_24"
            app:iconTint="@color/secondaryTextColor"
            app:layout_constraintBottom_toBottomOf="parent"
        />
        <Button
            android:id="@+id/content_setting_button_delete_user"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/default_padding"
            android:layout_marginBottom="10dp"
            android:text="@string/delete_user"
            android:textColor="@color/white"
            android:textSize="@dimen/default_text_size"
            app:cornerRadius="@dimen/default_button_corner_radius"
            app:icon="@drawable/ic_baseline_delete_24"
            app:iconTint="@color/secondaryTextColor"
            app:layout_constraintBottom_toBottomOf="parent"
            />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>